# flashcat

./: .gitignore  README.md  pyproject.toml
Examples/: calculate_smvi.m  compute_smvi.m
src/flashcat/: cli.py  pet.py  utils.py
src/flashcat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/flashcat/indices/: FD_rzsm.py  eddi.py  esi.py  scpdsi.py  sesr.py  smpd.py  smvi.py  spei.py  spi.py
src/flashcat/indices/examples/: test_eddi.ipynb  test_esi.ipynb
src/functions/: helper_functions.py
src/indicators/: eddi.py  esi.py  example.py  fdii.py  plotesi.py  sesr.py
