[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashcat"
version = "0.1.0"
description = "Flash Drought Characterization and Analysis Toolkit"
readme = "README.md"
authors = [
  { name = "Kumar Puran Tripathy", email = "your.email@tamu.edu" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = ["drought", "climate", "hydrology", "flash drought", "analysis"]
requires-python = ">=3.9"

# prerequisite packages
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "xarray>=2022.0.0",  # Essential for handling NetCDF/Grid data
    "netCDF4>=1.5.0",
    "matplotlib>=3.5.0",
]

[project.urls]
"Homepage" = "https://github.com/ktripa/flashcat"
"Bug Tracker" = "https://github.com/ktripa/flashcat/issues"