[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashcat"
version = "0.0.1"
description = "Flash Drought Characterization and Analysis Toolkit"
readme = "README.md"
authors = [
  { name = "Kumar Puran Tripathy", email = "kumarpuran.tripathy@tamu.edu" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/ktripa/flashcat"